removed IG for stack overflow temporarily

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
     <header id="header "class="header flex items-center justify-between w-full top-0 left-0 py-10 bg-transparent">
         <nav class="nav container container-padding-1 relative flex items-center justify-between">
             <!-- Action links -->
-            <div class="nav__action__links flex items-center text-sm font-medium tracking-tight">
-                <a href="mailto:danieladeofficial@gmail.com" class="email flex items-center justify-center w-20 h-10 rounded-full mr-2">
+            <div class="nav__action__links flex items-center font-medium tracking-tight">
+                <a href="mailto:danieladeofficial@gmail.com" class="email text-sm flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
                 <button id="nothing" class="nothing text-xs flex items-center justify-center w-12 h-11 font-extrabold">
@@ -41,23 +41,22 @@
                     <img src="assets/images/descriptions/coffee-cup.gif" alt="Coffee" class="w-9 h-9">
                    </span>
                 </button>
-                <!-- 🇬🇧  🇵🇱  🇩🇪 -->
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a> -->
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank">LinkedIn</a>
-                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank">Stackoverflow</a> -->
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank">Stack Overflow</a>
+                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a> -->
                 </div>
             </div>
         </nav>
@@ -188,8 +187,8 @@
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a> -->
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a> -->
                 </div>
             </div>
          </footer>
