added tailwind classes and cleared space in styles.css

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,9 @@
             <div class="profile relative w-40">
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.225rem] border-solid" 
-                src="assets/images/me/avatar-2.jpg" alt="Profile">
+                src="assets/images/me/favicon.png" alt="Profile">
+                <!-- src="assets/images/me/avatar-2.jpg" alt="Profile"> -->
+                
                 <span class="name absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     I'm Daniel &nbsp;👋🏼 
                 </span>
