added whatsapp  number link

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,8 @@
                 <a href="mailto:danieladeofficial@gmail.com" class="email text-sm flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
-                <button id="nothing" class="nothing text-xs flex items-center justify-center w-12 h-11 font-extrabold">
-                   <!-- <span class="noth-icon"><i class="ri-cup-line"></i></span> -->
-                   <span class="noth-icon text-base">
+                <button id="nothing" class="nothing text-xs flex items-center justify-center w-12 h-11 font-extrabold"> 
+                   <span class="noth-icon">
                     <img src="assets/images/descriptions/coffee-cup.gif" alt="Coffee" class="w-9 h-9">
                    </span>
                 </button>
@@ -48,7 +47,7 @@
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
@@ -56,7 +55,7 @@
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a>
                     <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank">Instagram</a> -->
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a> -->
                 </div>
             </div>
         </nav>
@@ -197,7 +196,7 @@
                     <i class="ri-mail-send-line mr-2"></i>
                     <span>Email</span>
                 </a>
-                <a href="#" target="_blank" class="flex items-center justify-center border-[0.25rem] border-solid w-24 h-12 rounded-full p-2">
+                <a href="https://wa.link/dghhti" target="_blank" class="flex items-center justify-center border-[0.25rem] border-solid w-24 h-12 rounded-full p-2">
                     WhatsApp
                 </a>
             </div>
