added buymeacoffee link in nav and started projects section

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
                 <a href="mailto:danieladeofficial@gmail.com" class="email text-sm flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
-                <button id="nothing" class="nothing text-xs flex items-center justify-center w-12 h-11 font-extrabold"> 
+                <a href="https://buymeacoffee.com/heisdanielade" target="_blank" id="buymeacoffee" class="buymeacoffee text-xs flex items-center justify-center w-12 h-11 font-extrabold"> 
                    <span class="noth-icon">
                     <img src="assets/images/descriptions/coffee-cup.gif" alt="Coffee" class="w-9 h-9">
                    </span>
-                </button>
+                </a>
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
@@ -173,6 +173,66 @@
                             Ensuring your vision comes to life with top-tier quality and testing standards.
                         </p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!--====== PROJECTS ======-->
+        <section id="projects" class="projects hidden w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
+            <p class="title text-sm w-28 h-12 font-bold rounded-full p-2 border-[0.25rem] border-solid flex items-center justify-center">
+                Projects
+            </p>
+
+            <div class="content w-full flex items-center flex-col">
+                <div class="top flex items-center justify-normal">
+                    <a href="https://cmc-clone-daniel.netlify.app" target="_blank" class="proj-link relative">
+                        <span class="arrow w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </span>
+                        <img src="assets/images/projects/cmc-project.png" alt="Project" class="proj-img object-cover">
+                        <h3 class="proj-name">
+                            CoinmarketCap Clone
+                        </h3>
+                        <div class="proj-stack">
+                            <span class="tech">
+                                HTML
+                            </span>
+                            <span class="dot">
+
+                            </span>
+                            <span class="tech">
+                                CSS
+                            </span>
+                            <span class="dot">
+
+                            </span>
+                            <span class="tech">
+                                Javascript
+                            </span>
+                        </div>
+                    </a>
+
+                    <a href="https://pw-daniel.netlify.app" target="_blank" class="proj-link">
+                        <img src="assets/images/projects/payment-page-project.png" alt="Project" class="proj-img object-cover">
+                        <h3 class="proj-name">
+                            Payment Page
+                        </h3>
+                        <div class="proj-stack">
+                            <span class="tech">
+                                HTML
+                            </span>
+                            <span class="dot">
+
+                            </span>
+                            <span class="tech">
+                                CSS
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="bottom">
+
                 </div>
             </div>
         </section>
