--- a/public/index.html
+++ b/public/index.html
@@ -81,10 +81,10 @@
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow invert z-10 absolute w-20 h-20 left-[3.25rem] bottom-[-4.5rem]">
             </div>
             <div class="content flex items-center justify-center flex-col pt-2">
-                <h1 class="info text-center text-6xl gradient-text mt-20">
+                <h1 class="info text-center text-6xl mt-20">
                     <!-- inline-block whitespace-pre-wrap break-words -->
 
-                    Crafting digital<br> spaces, products and experiences.
+                    <span class="gradient-text">Crafting digital<br> spaces, products</span><span class="hht stroke-text-2"> and experiences.</span>
                 </h1>
                 <a href="https://github.com/heisdanielade" target="_blank" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
@@ -179,60 +179,143 @@
 
 
         <!--====== PROJECTS ======-->
-        <section id="projects" class="projects hidden w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <p class="title text-sm w-28 h-12 font-bold rounded-full p-2 border-[0.25rem] border-solid flex items-center justify-center">
+        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
+            <!-- <p class="title text-sm w-28 h-12 font-bold rounded-full mb-8 p-2 border-[0.25rem] border-solid flex items-center justify-center">
                 Projects
-            </p>
+            </p> -->
+            <h1 class="title text-center text-3xl gradient-text mb-14">
+                My Projects
+            </h1>
 
             <div class="content w-full flex items-center flex-col">
-                <div class="top flex items-center justify-normal">
-                    <a href="https://cmc-clone-daniel.netlify.app" target="_blank" class="proj-link relative">
-                        <span class="arrow w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                <!-- top -->
+                <div class="proj-cont flex items-center justify-normal mb-10">
+                    <a href="https://cmc-clone-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
+                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
                             <i class="ri-arrow-right-up-line"></i>
                         </span>
-                        <img src="assets/images/projects/cmc-project.png" alt="Project" class="proj-img object-cover">
-                        <h3 class="proj-name">
-                            CoinmarketCap Clone
-                        </h3>
-                        <div class="proj-stack">
-                            <span class="tech">
-                                HTML
-                            </span>
-                            <span class="dot">
 
-                            </span>
-                            <span class="tech">
-                                CSS
-                            </span>
-                            <span class="dot">
-
-                            </span>
-                            <span class="tech">
-                                Javascript
-                            </span>
+                        <img src="assets/images/projects/podcast-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
+                        <div class="proj-details bottom-0 left-0 w-[9.35rem] h-14 p-3 absolute text-xs">
+                            <h3 class="proj-name font-medium mb-1">
+                                Podcast Page
+                            </h3>
+                            <div class="proj-stack bottom-4 left-3 font-light">
+                                <span class="tech">
+                                    HTML
+                                </span>
+                                <span class="dot ml-1 mr-1">
+                                    •
+                                </span>
+                                <span class="tech">
+                                    Tailwind CSS
+                                </span>
+                            </div>
                         </div>
                     </a>
 
-                    <a href="https://pw-daniel.netlify.app" target="_blank" class="proj-link">
-                        <img src="assets/images/projects/payment-page-project.png" alt="Project" class="proj-img object-cover">
-                        <h3 class="proj-name">
-                            Payment Page
-                        </h3>
-                        <div class="proj-stack">
-                            <span class="tech">
-                                HTML
-                            </span>
-                            <span class="dot">
+                    <a href="https://pw-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] w-[15.375rem] h-[15.375rem]">
+                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </span>
 
-                            </span>
-                            <span class="tech">
-                                CSS
-                            </span>
+                        <img src="assets/images/projects/finance-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
+                        <div class="proj-details bottom-0 left-0 w-40 h-14 p-3 absolute text-xs">
+                            <h3 class="proj-name font-medium mb-1">
+                                Finance Page Design
+                            </h3>
+                            <div class="proj-stack bottom-4 left-3 font-light">
+                                <span class="tech">
+                                    HTML
+                                </span>
+                                <span class="dot ml-1 mr-1">
+                                    •
+                                </span>
+                                <span class="tech">
+                                    CSS
+                                </span>
+                            </div>
                         </div>
                     </a>
                 </div>
-                <div class="bottom">
 
+                <!-- bottom -->
+                <div class="proj-cont flex items-center justify-normal">
+                    <a href="https://heisdanielade.xyz" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[15.375rem] h-[15.375rem]">
+                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </span>
+
+                        <img src="assets/images/projects/portfolio-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
+                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
+                            <h3 class="proj-name font-medium mb-1">
+                                My Portfolio
+                            </h3>
+                            <div class="proj-stack bottom-4 left-3 font-light">
+                                <span class="tech">
+                                    Tailwind CSS
+                                </span>
+                                <span class="dot ml-1 mr-1">
+                                    •
+                                </span>
+                                <span class="tech">
+                                    Git
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[18.375rem] h-[15.375rem]">
+                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </span>
+
+                        <img src="assets/images/projects/custom-homes-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
+                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
+                            <h3 class="proj-name font-medium mb-1">
+                                HomeCraft Design
+                            </h3>
+                            <div class="proj-stack bottom-4 left-3 font-light">
+                                <span class="tech">
+                                    Tailwind CSS
+                                </span>
+                                <span class="dot ml-1 mr-1">
+                                    •
+                                </span>
+                                <span class="tech">
+                                    Git
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="proj-link relative rounded-[1rem] w-[23.75rem] h-[15.375rem]">
+                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </span>
+
+                        <img src="assets/images/projects/video-chat-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
+                        <div class="proj-details bottom-0 left-0 w-40 h-14 p-3 absolute text-xs">
+                            <h3 class="proj-name font-medium mb-1">
+                                VideoChat Design
+                            </h3>
+                            <div class="proj-stack bottom-4 left-3 font-light">
+                                <span class="tech">
+                                    HTML
+                                </span>
+                                <span class="dot ml-1 mr-1">
+                                    •
+                                </span>
+                                <span class="tech">
+                                    Tailwind CSS
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+
+                    
+
+                    
                 </div>
             </div>
         </section>
@@ -265,7 +348,7 @@
 
          <!--====== FOOTER ======-->
          <footer id="footer" class="footer w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <div class="line mb-12 w-full h-[0.025rem]"></div>
+            <div class="line mb-12 w-full h-[0.035rem]"></div>
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
