started working on mobile view for projects section 90%

--- a/public/index.html
+++ b/public/index.html
@@ -180,11 +180,11 @@
 
         <!--====== PROJECTS ======-->
         <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <!-- <p class="title text-sm w-28 h-12 font-bold rounded-full mb-8 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+            <!-- <p class="title text-sm w-28 h-12 font-bold rounded-full mb-8 p-2 flex items-center justify-center">
                 Projects
             </p> -->
-            <h1 class="title text-center text-3xl gradient-text mb-14">
-                My Projects
+            <h1 class="title-info text-center text-3xl gradient-text mb-14">
+                Here are some front-end projects<br class="proj-info-text-break-1"> I have <br class="proj-info-text-break-2">worked on.
             </h1>
 
             <div class="content w-full flex items-center flex-col">
@@ -348,7 +348,7 @@
 
          <!--====== FOOTER ======-->
          <footer id="footer" class="footer w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <div class="line mb-12 w-full h-[0.035rem]"></div>
+            <div class="line mb-12 w-full h-[0.1125rem]"></div>
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
