started working on mobile view for projects section 98%

--- a/public/index.html
+++ b/public/index.html
@@ -82,9 +82,13 @@
             </div>
             <div class="content flex items-center justify-center flex-col pt-2">
                 <h1 class="info text-center text-6xl mt-20">
-                    <!-- inline-block whitespace-pre-wrap break-words -->
 
-                    <span class="gradient-text">Crafting digital<br> spaces, products</span><span class="hht stroke-text-2"> and experiences.</span>
+                    <span class="gradient-text">
+                        Crafting digital<br> spaces, products and experiences.
+                    </span>
+
+                    <!-- <span class="gradient-text">Crafting digital<br> spaces, products</span><span class="hht stroke-text-2"> and experiences.</span> -->
+                
                 </h1>
                 <a href="https://github.com/heisdanielade" target="_blank" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
@@ -184,15 +188,17 @@
                 Projects
             </p> -->
             <h1 class="title-info text-center text-3xl gradient-text mb-14">
-                Here are some front-end projects<br class="proj-info-text-break-1"> I have <br class="proj-info-text-break-2">worked on.
+                Some front-end projects<br> I have worked on.
             </h1>
 
+            <!-- content -->
             <div class="content w-full flex items-center flex-col">
+
                 <!-- top -->
                 <div class="proj-cont flex items-center justify-normal mb-10">
                     <a href="https://cmc-clone-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
-                            <i class="ri-arrow-right-up-line"></i>
+                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                            <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/podcast-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
@@ -215,14 +221,14 @@
                     </a>
 
                     <a href="https://pw-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] w-[15.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
-                            <i class="ri-arrow-right-up-line"></i>
+                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                            <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/finance-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-40 h-14 p-3 absolute text-xs">
+                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
-                                Finance Page Design
+                                Finance Page
                             </h3>
                             <div class="proj-stack bottom-4 left-3 font-light">
                                 <span class="tech">
@@ -242,8 +248,8 @@
                 <!-- bottom -->
                 <div class="proj-cont flex items-center justify-normal">
                     <a href="https://heisdanielade.xyz" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[15.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
-                            <i class="ri-arrow-right-up-line"></i>
+                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                            <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/portfolio-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
@@ -266,8 +272,8 @@
                     </a>
 
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[18.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
-                            <i class="ri-arrow-right-up-line"></i>
+                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                            <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/custom-homes-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
@@ -290,8 +296,8 @@
                     </a>
 
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] w-[23.75rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-8 h-8 absolute flex items-center justify-center text-xl font-bold">
-                            <i class="ri-arrow-right-up-line"></i>
+                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                            <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/video-chat-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
