--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,11 @@
             <div class="content flex items-center justify-center flex-col pt-2">
                 <h1 class="info text-center text-6xl mt-20">
 
-                    <span class="gradient-text">
+                    <!-- <span class="gradient-text">
                         Crafting digital<br> spaces, products and experiences.
-                    </span>
+                    </span> -->
 
-                    <!-- <span class="gradient-text">Crafting digital<br> spaces, products</span><span class="hht stroke-text-2"> and experiences.</span> -->
+                    <span class="gradient-text">Crafting digital<br> spaces, products and experien</span><span class="hht stroke-text-2">ces.</span>
                 
                 </h1>
                 <a href="https://github.com/heisdanielade" target="_blank" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
@@ -138,7 +138,7 @@
         <!--====== SERVICES ======-->
         <section id="services" class="services w-[71.875rem] section container container-padding-1 relative flex items-center justify-center flex-col">
             <h1 class="title-info text-center text-4xl gradient-text">
-                Let's collaborate to<br> achieve remarkable<br> outcomes.
+                Let's collaborate to<br> achieve amazing<br> works.
             </h1>
 
             <span class="title text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
@@ -354,7 +354,7 @@
 
          <!--====== FOOTER ======-->
          <footer id="footer" class="footer w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <div class="line mb-12 w-full h-[0.1125rem]"></div>
+            <div class="line mb-8 w-full h-[0.1125rem]"></div>
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
