done with mobile view for projects section

--- a/public/index.html
+++ b/public/index.html
@@ -328,7 +328,7 @@
 
 
          <!--====== CONTACT ======-->
-         <section id="contact" class="contact w-[71.875rem] section container container-padding-1">
+         <section id="contact" class="contact w-[71.875rem] section container container-padding-1 mb-2">
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
