made minor changes in font sizes and margins

--- a/public/index.html
+++ b/public/index.html
@@ -45,17 +45,17 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a>
-                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a> -->
+                    <span class="slash font-bold ml-1 mr-1">/</span>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a>
                 </div>
             </div>
         </nav>
@@ -72,7 +72,6 @@
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.225rem] border-solid" 
                 src="assets/images/me/favicon.png" alt="Profile">
-                <!-- src="assets/images/me/avatar-2.jpg" alt="Profile"> -->
                 
                 <span class="name absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     I'm Daniel &nbsp;👋🏼 
@@ -80,7 +79,7 @@
                 <!-- curved arrow -->
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow invert z-10 absolute w-20 h-20 left-[3.25rem] bottom-[-4.5rem]">
             </div>
-            <div class="content flex items-center justify-center flex-col pt-2">
+            <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info text-center text-6xl mt-20">
 
                     <!-- <span class="gradient-text">
@@ -145,7 +144,7 @@
                 Services
             </span>
 
-            <div class="serv-con mt-8 mb-5 flex items-center justify-evenly w-full">
+            <div class="serv-con mt-8 mb-6 flex items-center justify-evenly w-full">
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box m-1 w-[15rem]">
                         <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
@@ -187,7 +186,7 @@
             <!-- <p class="title text-sm w-28 h-12 font-bold rounded-full mb-8 p-2 flex items-center justify-center">
                 Projects
             </p> -->
-            <h1 class="title-info text-center text-3xl gradient-text mb-14">
+            <h1 class="title-info text-center text-4xl gradient-text mb-14">
                 Some front-end projects<br> I have worked on.
             </h1>
 
@@ -328,14 +327,14 @@
 
 
          <!--====== CONTACT ======-->
-         <section id="contact" class="contact w-[71.875rem] section container container-padding-1 mb-2">
+         <section id="contact" class="contact w-[71.875rem] section container container-padding-1 mb-5">
             <!-- image & title -->
              <div class="heading flex items-center flex-col">
                 <div class="image-container rounded-full flex items-center justify-center">
                     <img src="assets/images/descriptions/talk.gif" alt="Contact" class="w-24 h-24">
                 </div>
 
-                <h1 class="title mt-8 text-3xl gradient-text text-center">
+                <h1 class="title mt-8 text-6xl gradient-text text-center">
                     Discuss your next<br> project
                 </h1>
              </div>
@@ -365,9 +364,9 @@
     
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-2 rounded-full"><i class="ri-stack-overflow-line"></i></a>
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a> -->
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
          </footer>
