edited meta info

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio website for Daniel Adediran - heisdanielade">
-    <meta name="keywords" content="heisdanielade, developer, javascript, polish, poland, zielona góra, software engineer">
+    <meta name="keywords" content="heisdanielade, data analyst, developer, poland, javascript, polish, zielona góra, software engineer, uz">
     <meta name="author" content="Daniel Adediran">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Page Title">
+    <meta property="og:title" content="Portfolio | heisdanielade">
     <meta property="og:description" content="Portfolio website for Daniel Adediran - heisdanielade">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
-    <link rel="canonical" href="">
+    <meta property="og:image" content="https://heisdanielade.xyz/assets/images/projects/portfolio-project.png">
+    <meta property="og:url" content="https://www.heisdanielade.xyz">
+    <link rel="canonical" href="https://www.heisdanielade.xyz">
     <!-- Addition files-->
     <link rel="stylesheet" href="./output.css">
     <!-- Icons -->
@@ -183,9 +183,6 @@
 
         <!--====== PROJECTS ======-->
         <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <!-- <p class="title text-sm w-28 h-12 font-bold rounded-full mb-8 p-2 flex items-center justify-center">
-                Projects
-            </p> -->
             <h1 class="title-info text-center text-4xl gradient-text mb-14">
                 Some front-end projects<br> I have worked on.
             </h1>
@@ -195,7 +192,7 @@
 
                 <!-- top -->
                 <div class="proj-cont flex items-center justify-normal mb-10">
-                    <a href="https://cmc-clone-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
+                    <a href="#" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
                         <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
@@ -219,7 +216,7 @@
                         </div>
                     </a>
 
-                    <a href="https://pw-daniel.netlify.app" target="_blank" class="proj-link relative rounded-[1rem] w-[15.375rem] h-[15.375rem]">
+                    <a href="#" target="_blank" class="proj-link relative rounded-[1rem] w-[15.375rem] h-[15.375rem]">
                         <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
