--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./output.css">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
     <!-- Page details -->
     <title>Portfolio | heisdanielade</title>
     <link rel="shortcut icon" href="assets/images/me/favicon.png" type="image/x-icon">
@@ -77,7 +76,7 @@
                     I'm Daniel &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
-                <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow invert z-10 absolute w-20 h-20 left-[3.25rem] bottom-[-4.5rem]">
+                <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 invert z-10 absolute w-20 h-20 left-[3.25rem] bottom-[-4.5rem]">
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info text-center text-6xl mt-20">
@@ -193,12 +192,12 @@
                 <!-- top -->
                 <div class="proj-cont flex items-center justify-normal mb-10">
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                        <span class="arrow z-10 top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/podcast-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-[9.35rem] h-14 p-3 absolute text-xs">
+                        <div class="proj-details z-10 bottom-0 left-0 w-[9.35rem] h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
                                 Podcast Page
                             </h3>
@@ -217,12 +216,12 @@
                     </a>
 
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] w-[15.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                        <span class="arrow z-10 top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/finance-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
+                        <div class="proj-details z-10 bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
                                 Finance Page
                             </h3>
@@ -244,12 +243,12 @@
                 <!-- bottom -->
                 <div class="proj-cont flex items-center justify-normal">
                     <a href="https://heisdanielade.xyz" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[15.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                        <span class="arrow z-10 top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/portfolio-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
+                        <div class="proj-details z-10 bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
                                 My Portfolio
                             </h3>
@@ -268,12 +267,12 @@
                     </a>
 
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] mr-8 w-[18.375rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                        <span class="arrow z-10 top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/custom-homes-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
+                        <div class="proj-details z-10 bottom-0 left-0 w-32 h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
                                 HomeCraft Design
                             </h3>
@@ -292,12 +291,12 @@
                     </a>
 
                     <a href="#" target="_blank" class="proj-link relative rounded-[1rem] w-[23.75rem] h-[15.375rem]">
-                        <span class="arrow top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
+                        <span class="arrow z-10 top-0 right-0 w-9 h-9 absolute flex items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
                         </span>
 
                         <img src="assets/images/projects/video-chat-project.png" alt="Project" class="proj-img rounded-2xl object-cover w-full h-full">
-                        <div class="proj-details bottom-0 left-0 w-40 h-14 p-3 absolute text-xs">
+                        <div class="proj-details z-10 bottom-0 left-0 w-40 h-14 p-3 absolute text-xs">
                             <h3 class="proj-name font-medium mb-1">
                                 VideoChat Design
                             </h3>
