--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box not-shown-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
@@ -81,14 +81,10 @@
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-6xl mt-20">
 
-                    <!-- <span class="gradient-text">
-                        Crafting digital<br> spaces, products and experiences.
-                    </span> -->
-
                     <span class="gradient-text">Crafting digital<br> spaces, products and experien</span><span class="hht stroke-text-2">ces.</span>
                 
                 </h1>
-                <a href="https://github.com/heisdanielade" target="_blank" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
+                <a href="https://github.com/heisdanielade" target="_blank" class="github__link not-shown flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
                     <i class="ri-arrow-right-up-line underline font-light text-sm ml-2"></i>
                 </a>                
@@ -97,7 +93,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <section id="carousel" class="carousel w-[71.875rem] container container-padding-2 relative overflow-hidden flex items-center justify-center bg-transparent">
+        <section id="carousel" class="carousel not-shown w-[71.875rem] container container-padding-2 relative overflow-hidden flex items-center justify-center bg-transparent">
             <div class="carousel-track animate-carousel flex items-center justify-evenly h-20 p-1">
                 <img src="assets/images/logos/roblox.png" alt="Logo" class="logo object-cover w-[8.5rem] mr-16">
                 <img src="assets/images/logos/oracle.png" alt="Logo" class="logo object-cover w-[8.5rem] mr-16">
@@ -139,7 +135,7 @@
                 Let's collaborate to<br> achieve amazing<br> works.
             </h1>
 
-            <span class="title text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+            <span class="title not-shown text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
                 Services
             </span>
 
@@ -360,7 +356,7 @@
     
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box not-shown-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a>
                     <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
                 </div>
