added page loader

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,15 @@
 
  <div id="page" class="page">
 
+    <div id="page-loader" class="page-loader fixed flex items-center justify-center flex-col top-0 left-0 z-50 h-screen w-full">
+        <div class="loader">
+            
+        </div>
+
+        <div class="name mt-5 font-medium">
+            heisdanielade
+        </div>
+    </div>
 
    <!--====== HEADER ======-->
     <header id="header "class="header flex items-center justify-between w-full top-0 left-0 py-10 bg-transparent">
