--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,8 @@
 
  <div id="page" class="page">
 
-    <div id="page-loader" class="page-loader fixed flex items-center justify-center flex-col top-0 left-0 z-50 h-screen w-full">
-        <div class="loader">
-            
-        </div>
-
-        <div class="name mt-5 font-medium">
-            heisdanielade
-        </div>
+    <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
+        <div class="loader"></div>
     </div>
 
    <!--====== HEADER ======-->
