added page loader 3

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
 
  <div id="page" class="page">
 
+    <!--====== PAGE LOADER ======-->
     <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
-        <div class="loader"></div>
+        <div class="loader w-[2.813rem]"></div>
     </div>
 
    <!--====== HEADER ======-->
