added animated svg text as page loader

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,14 @@
 
     <!--====== PAGE LOADER ======-->
     <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
-        <div class="loader w-[2.813rem]"></div>
+        <!-- <div class="loader w-[2.813rem]"></div> -->
+
+        <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
+            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-size="2.5rem" fill="rgb(220, 220, 220)" stroke="#242424" stroke-width="0.9" class="loader">
+                _heisdanielade_
+            </text>
+        </svg>
+
     </div>
 
    <!--====== HEADER ======-->
@@ -138,7 +145,7 @@
                 Let's collaborate to<br> achieve amazing<br> works.
             </h1>
 
-            <span class="title bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
                 Services
             </span>
 
@@ -146,15 +153,15 @@
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3">Data Analysis</h2>
-                        <p class="info text-sm">
+                        <h2 class="text text-lg font-medium mb-3 clr-first">Data Analysis</h2>
+                        <p class="info text-sm clr-first">
                             Conducting analyses that<br class="text-break hidden"> are insightful and accurate for your needs.
                         </p>
                     </div>
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3">Web Development</h2>
-                        <p class="info text-sm">
+                        <h2 class="text text-lg font-medium mb-3 clr-first">Web Development</h2>
+                        <p class="info text-sm clr-first">
                             Turning concepts into outstanding web app experiences.
                         </p>
                     </div>
@@ -162,15 +169,15 @@
                 <div class="con-2 flex items-center justify-evenly">
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/design.gif" alt="Design" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3">UI & UX</h2>
-                        <p class="info text-sm">
+                        <h2 class="text text-lg font-medium mb-3 clr-first">UI & UX</h2>
+                        <p class="info text-sm clr-first">
                             Creating visually striking designs that resonate with your audience.
                         </p>
                     </div>
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/quality.gif" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3">Quality Assurance</h2>
-                        <p class="info text-sm">
+                        <h2 class="text text-lg font-medium mb-3 clr-first">Quality Assurance</h2>
+                        <p class="info text-sm clr-first">
                             Ensuring your vision comes to life with top-tier quality and testing standards.
                         </p>
                     </div>
@@ -352,7 +359,7 @@
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
-                    <p class="text-xs font-medium mt-3">
+                    <p class="text-xs font-medium mt-3 clr-first">
                         &copy; <span id="year"></span> All rights reserved.
                     </p>
                 </div>
