--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
         <!-- <div class="loader w-[2.813rem]"></div> -->
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
-            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-size="2.5rem" fill="rgb(240, 240, 240)" stroke="#242424" stroke-width="0.9" class="loader">
-                _heisdanielade_
+            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-size="2.5rem" fill="none" stroke="#242424" stroke-width="0.9" class="loader">
+                (-_-)
             </text>
         </svg>
 
