--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,9 @@
 
     <!--====== PAGE LOADER ======-->
     <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
-        <!-- <div class="loader w-[2.813rem]"></div> -->
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
-            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
+            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
                 H
             </text>
         </svg>
@@ -92,7 +91,7 @@
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-6xl mt-20">
 
-                    <span class="gradient-text">Crafting digital<br> spaces, products and experien</span><span class="hht stroke-text-2">ces.</span>
+                    <span class="gradient-text">Crafting digital<br> spaces, products and experiences.</span><span class="hht stroke-text-2 hidden">ces.</span>
                 
                 </h1>
                 <a href="https://github.com/heisdanielade" target="_blank" class="github__link not-shown clr-white bg-first flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
@@ -188,9 +187,12 @@
 
         <!--====== PROJECTS ======-->
         <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <h1 class="title-info not-shown text-center text-4xl gradient-text mb-14">
+            <!-- <h1 class="title-info not-shown text-center text-4xl gradient-text mb-14">
                 Some front-end projects<br> I have worked on.
-            </h1>
+            </h1> -->
+            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-10 mb-10 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+                Projects
+            </span>
 
             <!-- content -->
             <div class="content w-full flex items-center flex-col">
@@ -341,7 +343,7 @@
                 </h1>
              </div>
             <!-- action buttons -->
-            <div class="actions not-shown flex items-center justify-center mt-9 text-xs font-medium">
+            <div class="actions not-shown flex items-center justify-center mt-12 text-xs font-medium">
                 <a href="mailto:danieladeofficial@gmail.com" target="_blank" class="clr-white bg-first flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
                     <i class="ri-mail-send-line mr-2"></i>
                     <span>Email</span>
@@ -360,7 +362,7 @@
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
                     <p class="text-xs font-medium mt-3 clr-first">
-                        &copy; <span id="year"></span> All rights reserved.
+                        &copy; <span id="year"></span> &nbsp;Daniel Adediran
                     </p>
                 </div>
     
