--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
-    <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
+    <div id="page-loader" class="page-loader hidden fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
@@ -35,6 +35,7 @@
         </svg>
 
     </div>
+
 
    <!--====== HEADER ======-->
     <header id="header "class="header bg-transparent flex items-center justify-between w-full top-0 left-0 py-10 bg-transparent">
@@ -190,7 +191,7 @@
             <!-- <h1 class="title-info not-shown text-center text-4xl gradient-text mb-14">
                 Some front-end projects<br> I have worked on.
             </h1> -->
-            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-10 mb-10 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+            <span class="title clr-white bg-first not-shown text-sm w-28 h-12 font-bold rounded-full mt-10 mb-10 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
                 Projects
             </span>
 
