--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                 Let's collaborate to<br> achieve amazing<br> works.
             </h1>
 
-            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 border-[0.25rem] border-solid flex items-center justify-center">
+            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mt-14 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
                 Services
             </span>
 
@@ -362,7 +362,7 @@
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
-                    <p class="text-xs font-medium mt-3 clr-first">
+                    <p class="text-sm font-medium mt-3 clr-first">
                         &copy; <span id="year"></span>&nbsp;Daniel Adediran
                     </p>
                 </div>
