--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
-    <div id="page-loader" class="page-loader fixed hidden -flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
+    <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
@@ -145,8 +145,9 @@
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                 Creative Solutions
             </h1>
-
-            <span class="title clr-first bg-whitec not-shown text-sm w-28 h-12 font-bold rounded-full mb-9 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
+            
+            <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-whitec absolute mb-8 w-[96%] h-[0.0325rem]"></div>
+            <span class="title relative z-20 clr-first bg-whitec not-shon text-sm w-28 h-12 font-bold rounded-full mb-9 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
                 Services
             </span>
 
@@ -190,10 +191,11 @@
         <!--====== PROJECTS ======-->
         <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
-                Portfolio Highlights
+                Showcases
             </h1>
 
-            <span class="title clr-white bg-first not-shown text-sm w-28 h-12 font-bold rounded-full mb-12 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
+            <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-first absolute mb-8 w-[96%] h-[0.0325rem]"></div>
+            <span class="title z-20 clr-white bg-first not-shwn text-sm w-28 h-12 font-bold rounded-full mb-12 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
                 Projects
             </span>
 
@@ -360,7 +362,7 @@
 
          <!--====== FOOTER ======-->
          <footer id="footer" class="footer bg-container-desktop w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
-            <div class="line bg-whitec mb-8 w-full h-[0.1rem]"></div>
+            <div class="line bg-whitec mb-8 w-full h-[0.075rem]"></div>
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
