--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
         <!--====== PROJECTS ======-->
         <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
-                Showcases
+                Highlights
             </h1>
 
             <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-first absolute mb-8 w-[70%] h-[0.0325rem]"></div>
